# fortis-uc1-tau

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt  ros2_entrypoint.sh
SA41/DebugingNode/: package.xml  setup.cfg  setup.py
SA41/DebugingNode/DebugingNode/: deb_node.py
SA41/fortis_uc1_tau_bringup/: CMakeLists.txt  package.xml
SA41/fortis_uc1_tau_bringup/launch/: fortis.launch.py
TK21/mic_driver/: package.xml  setup.cfg  setup.py
TK21/mic_driver/mic_driver/: mic_publisher.py
TK22/environment_perception/: package.xml  setup.cfg  setup.py
TK22/environment_perception/environment_perception/: audio_analyser.py  visual_quality_assessment.py
TK22/sensing_controller/: package.xml  setup.cfg  setup.py
TK22/sensing_controller/sensing_controller/: hearing.py  proximity.py  vision.py
TK32/adaptive_layers/: CMakeLists.txt
TK32/adaptive_layers/include/adaptive_layers/: audio_layer.hpp
TK32/adaptive_layers/src/: audio_layer.cpp
TK32/mir_description/: package.xml  setup.cfg  setup.py
TK32/mir_description/launch/: description.launch.py
TK32/mir_description/urdf/: mir.urdf.xacro
TK32/mir_driver/: package.xml  setup.cfg  setup.py
TK32/mir_driver/config/: topic_config.yaml
TK32/mir_driver/launch/: mir_launch.py
TK32/mir_driver/mir_driver/: mir_bridge.py  scanners_merger.py
TK32/mir_msgs/: CMakeLists.txt  package.xml
TK32/mir_msgs/msg/: MirState.msg
TK32/slam_config/: package.xml  setup.cfg  setup.py
TK32/slam_config/config/: mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml
TK32/slam_config/launch/: nav2_launch.py  navigation_launch.py
TK32/slam_config/maps/: FAST_lab1.data  FAST_lab1.pgm  FAST_lab1.yaml  map1.pgm  map1.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map_5.pgm  map_5.yaml  map_6.pgm  map_6_1.pgm  map_6_1.yaml
TK32/slam_config/slam_config/: map_displayer.py
TK33/adaptive_layers/: package.xml  plugin.xml
TK33/adaptive_layers/src/: audio_layer.cpp
TK33/move_controller/: package.xml  setup.cfg  setup.py
TK33/move_controller/move_controller/: basic_move.py  move_coordinator.py
TK33/reasoning_controller/: package.xml  setup.cfg  setup.py
TK34/costmaps_manager/: package.xml  setup.cfg  setup.py
(+11 files in other folders)
